repair-design-project/feat: add slider in fifth_block_fantasies

--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                 <img src="source/images/block5/b5 img 2-2.png" alt="" />
             </div>
             <div class="fifth_block_fantasies--slider">
-                <div class="fifth_block_fantasies--slider-l_cntrl"></div>
-                <div class="fifth_block_fantasies--slider-r_cntrl"></div>
-                <div class="fifth_block_fantasies--slider-items first-position" id="fifth_block_fantasies-slider">
+                <div class="fifth_block_fantasies--slider-l_cntrl" id="btn-slider-fifth_block_fantasies-left"></div>
+                <div class="fifth_block_fantasies--slider-r_cntrl" id="btn-slider-fifth_block_fantasies-right"></div>
+                <div class="fifth_block_fantasies--slider-items first-position2" id="fifth_block_fantasies-slider">
                     <div class="fifth_block_fantasies--slider-items-img1"></div>
                     <div class="fifth_block_fantasies--slider-items-img2"></div>
                     <div class="fifth_block_fantasies--slider-items-img3"></div>
