repair-design-project/feat: add slider in sixth_block

--- a/index.html
+++ b/index.html
@@ -369,42 +369,60 @@
                             whole and its individual stages.
                         </p>
                     </div>
-                    <img src="source/images/block6/b6 arrows.png" class="sixth_block_design--work-l_block-icon" alt="">
+                    <div class="sixth_block_design--work-l_block-arrows">
+                        <button id="btn-slider-sixth_block_design-left"></button>
+                        <span id="btn-slider-sixth_block_design-circle1"></span>
+                        <span id="btn-slider-sixth_block_design-circle2"></span>
+                        <span id="btn-slider-sixth_block_design-circle3"></span>
+                        <span id="btn-slider-sixth_block_design-circle4"></span>
+                        <span id="btn-slider-sixth_block_design-circle5"></span>
+                        <span id="btn-slider-sixth_block_design-circle6"></span>
+                        <button id="btn-slider-sixth_block_design-right"></button>
+                    </div>
                 </div>
                 <div class="sixth_block_design--work-r_block">
                     <div class="sixth_block_design--work-r_block-list1">
-                        <div class="sixth_block_design--work-r_block-list1-first">
+                        <div id="btn-slider-sixth_block_design1">
                             <span>01</span>
                             <p>Departure to</p>
                             <p>room measurements</p>
                         </div>
-                        <div>
+                        <div id="btn-slider-sixth_block_design2">
                             <span>02</span>
                             <p>Compilation</p>
                             <p>estimates</p>
                         </div>
-                        <div>
+                        <div id="btn-slider-sixth_block_design3">
                             <span>03</span>
                             <p>Development</p>
                             <p>project design</p>
                         </div>
                     </div>
                     <div class="sixth_block_design--work-r_block-list2">
-                        <div>
+                        <div id="btn-slider-sixth_block_design4">
                             <span>04</span>
                             <p>Purchasing Supplies</p>
                         </div>
-                        <div>
+                        <div id="btn-slider-sixth_block_design5">
                             <span>05</span>
                             <p>Repair finishing work</p>
                         </div>
-                        <div>
+                        <div id="btn-slider-sixth_block_design6">
                             <span>06</span>
                             <p>Acceptance and</p>
                             <p>delivery of works</p>
                         </div>
                     </div>
-                    <div class="sixth_block_design--work-r_block-img"></div>
+                    <div class="sixth_block_design--work-r_block-slider">
+                        <div class="sixth_block_design--work-r_block-slider-items first-position3" id="sixth_block_design-slider">
+                            <div class="sixth_block_design--work-r_block-slider-items-img1"></div>
+                            <div class="sixth_block_design--work-r_block-slider-items-img2"></div>
+                            <div class="sixth_block_design--work-r_block-slider-items-img3"></div>
+                            <div class="sixth_block_design--work-r_block-slider-items-img4"></div>
+                            <div class="sixth_block_design--work-r_block-slider-items-img5"></div>
+                            <div class="sixth_block_design--work-r_block-slider-items-img6"></div>
+                        </div>
+                    </div>
                 </div>
             </section>            
         </section>        
