repair-design-project/fix: fix bugs of markup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title></title>
+    <title>Repair-design-project</title>
 	<meta charset="utf-8" />
     <link href="reset.css" rel="stylesheet" />
     <link href="source/fonts/font-face.css" rel="stylesheet" />
@@ -97,9 +97,9 @@
             <div class="second_block_completed--r_section">
                 <nav>
                     <ul class="second_block_completed--r_section-nav">
-                        <li><a hrev="#" class="second_block_completed--r_section-nav-title">Rostov-on-Don, Admiral</a></li>
-                        <li><a hrev="#">Sochi Thieves</a></li>
-                        <li><a hrev="#">Rostov-on-Don Patriotic</a></li>
+                        <li><a href="#" class="second_block_completed--r_section-nav-title">Rostov-on-Don, Admiral</a></li>
+                        <li><a href="#">Sochi Thieves</a></li>
+                        <li><a href="#">Rostov-on-Don Patriotic</a></li>
                     </ul>
                 </nav>
                 <div class="second_block_completed--r_section-l_btn" id="btn-slider-second_block-left2"></div>
@@ -119,7 +119,7 @@
             <div class="third_block_control--player">
                 <div class="third_block_control--player-play" id="btn-play-third_block_control"></div>
                 <div class="third_block_control--player-pause" id="btn-pause-third_block_control"></div>
-                <video poster="/source/images/block3/b3 player.png" id="video">
+                <video poster="/source/images/block3/b3_player.jpg" id="video">
                     <source src="source/images/block3/video.mp4" type="video/mp4">                    
                     <source src="source/images/block3/video.webm" type="video/webm">
                     Your browser doesn't support HTML5 video tag.
@@ -273,12 +273,12 @@
                 </nav>
             </div>
             <div class="fifth_block_fantasies--l_imgs">
-                <img src="source/images/block5/b5 img 1-1.png" alt="" />                
-                <img src="source/images/block5/b5 img 2-1.png" alt="" />
+                <img src="source/images/block5/b5_img_1-1.png" alt="" />                
+                <img src="source/images/block5/b5_img_2-1.png" alt="" />
             </div>
             <div class="fifth_block_fantasies--r_imgs">
-                <img src="source/images/block5/b5 img 1-2.png" alt="" />
-                <img src="source/images/block5/b5 img 2-2.png" alt="" />
+                <img src="source/images/block5/b5_img_1-2.png" alt="" />
+                <img src="source/images/block5/b5_img_2-2.png" alt="" />
             </div>
             <div class="fifth_block_fantasies--slider">
                 <div class="fifth_block_fantasies--slider-l_cntrl" id="btn-slider-fifth_block_fantasies-left"></div>
@@ -538,7 +538,7 @@
                             </div>
                             <div class="ninth_block_questions--any-form-info-item2">
                                 <label>Phone</label>
-                                <input type="text" id="ninth_block-phone" pattern="\d{3}-\d{2}-\d{2}" value="Your phone number:" title="the format of the phone: 000-00-00" required" />
+                                <input type="text" id="ninth_block-phone" pattern="\d{3}-\d{2}-\d{2}" value="Your phone number:" title="the format of the phone: 000-00-00" required />
                             </div>
                         </div>
                         <div class="ninth_block_questions--any-form-item3">
@@ -575,12 +575,12 @@
         <h1 class="footer--title">IC "Repair Design Project"</h1>
         <nav class="footer--nav">
             <ul>
-                <li><a href="#" id="header-nav1">HOME</a></li>
-                <li><a href="#project" id="header-nav2">PROJECTS</a></li>
-                <li><a href="#measurement" id="header-nav3">MEASUREMENT</a></li>
-                <li><a href="#team" id="header-nav4">TEAM</a></li>
-                <li><a href="#reviews" id="header-nav5">REVIEWS</a></li>
-                <li><a href="#contacts" id="header-nav6">CONTACTS</a></li>
+                <li><a href="#" id="footer-nav1">HOME</a></li>
+                <li><a href="#project" id="footer-nav2">PROJECTS</a></li>
+                <li><a href="#measurement" id="footer-nav3">MEASUREMENT</a></li>
+                <li><a href="#team" id="footer-nav4">TEAM</a></li>
+                <li><a href="#reviews" id="footer-nav5">REVIEWS</a></li>
+                <li><a href="#contacts" id="footer-nav6">CONTACTS</a></li>
             </ul>
         </nav>
         <div>
